--- a/popup/popup.css
+++ b/popup/popup.css
@@ -78,6 +78,12 @@ body {
 
 .progressBarContainer {
   padding: 10px 20px;
+  outline: 0 dotted #ffffff;
+  outline-offset: -2px;
+}
+
+.progressBarContainer[browserAction] {
+  outline: 1px solid darkorange !important;
 }
 
 .progressBarTexts {
